[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "onionscout"
version = "0.0.4"
description = "CLI tool for basic Tor hidden-service (.onion) security checks"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "requests[socks]>=2.25.1",
  "PySocks>=1.7.1",
  "mmh3>=3.0",
  "paramiko>=2.12",
  "rich>=11.0",
  "Pillow>=8.0"
]

[project.scripts]
onionscout = "onionscout:main"

[tool.setuptools]
py-modules = ["onionscout"]

