[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "onionscout"
version = "0.1.4"
description = "CLI tool for auditing Tor hidden-service (.onion) security leaks and misconfigurations"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Hoek" }
]
keywords = [
  "tor",
  "onion",
  "hidden-service",
  "security",
  "osint",
  "audit",
  "pentest",
  "scanner"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Information Technology",
  "Intended Audience :: System Administrators",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Security",
  "Topic :: System :: Networking",
  "Topic :: Utilities"
]
dependencies = [
  "requests[socks]>=2.32.0",
  "PySocks>=1.7.1",
  "urllib3>=2.0.0",
  "mmh3>=4.1.0",
  "paramiko>=3.4.0",
  "rich>=13.7.0",
  "cryptography>=42.0.0",
  "selectolax>=0.3.21"
]

[project.urls]
Homepage = "https://github.com/h0ek/onionscout"
Repository = "https://github.com/h0ek/onionscout"
Issues = "https://github.com/h0ek/onionscout/issues"

[project.scripts]
onionscout = "onionscout:main"

[tool.setuptools]
py-modules = ["onionscout"]